# almaqso

./: .buildinfo  .gitignore  PreRequisites.md  README.md  almaqso.html  api_reference.html  architecture.html  component.html  container.html  context.html  genindex.html  index.html  install.html  introduction.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  sample.py  search.html  searchindex.js  setup.py  uml-activity.html  usage.html
.github/workflows/: check_and_test.yml  deploy_docs.yml  python-publish.yml
_sources/: introduction.rst.txt  uml-activity.rst.txt  usage.rst.txt
_static/: L3-component.puml  L4-almaqso.Almaqso._sort_images-activity.puml
almaqso/: _analysis.py  _casa_runner.py  _download.py  _logmgr.py  _process.py  _qsoanalysis.py  _query.py  _utils.py  _version.py  almaqso.py  analysis.py
almaqso/_api/: __init__.py  _analysis.py  _download.py  _process.py  _query.py
almaqso/_templates/: _remove_target.py  _tclean_cube.py  _tclean_mfs.py  _tclean_mfs_spw.py
almaqso/old/: _qsoanalysis.py  analysis.py
catalog/: test.json  test_2.json
docs/: almaqso.rst  architecture.rst  component.rst  conf.py  container.rst  context.rst  index.rst  uml-activity.rst  usage.rst
docs/diagrams/: L1-context.puml  L2-container.puml  L3-component.puml  L4-_process-activity.puml  L4-_process_wrapper-activity.puml  L4-almaqso.Almaqso._process-activity.puml  (+3 more)
sample/: sample.py
scripts/: code-check.sh  sphinx-build-html.sh  sphinx-build-pdf.sh
test/: test_download_analysis.py
tests/: test_query.py  test_utils.py
(+6 files in other folders)
