[build-system]
requires = [
  "setuptools>=62",
  "wheel",
  "setuptools_scm[toml]>=6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "almaqso"
version = "1.6.1"
description = "Automation for downloading and processing ALMA calibration target observations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroquery>=0.4.10",
    "coloredlogs>=15.0.1",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyvo>=1.6.1",
    "scipy>=1.15.2",
    "setuptools>=78.0.2",
    "spectral-cube>=0.6.6",
    "tdqm>=0.0.1",
    "tenacity>=9.1.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that make real network requests to the ALMA archive",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["almaqso*"]
exclude = ["docs*", "sample*", "catalog*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-plantuml>=0.31",
]
